// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> Default story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label"
        for="1"
      >
        Default input field
         
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby="2"
        aria-invalid="false"
        class="input"
        data-bootstrap-override="inputfield"
        id="1"
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="2"
    >
      This is a fieldnote.
    </div>
  </div>
</div>
`;

exports[`<InputField /> Disabled story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline input-field__overline--disabled"
    >
      <label
        class="label"
        for="7"
      >
        Disabled input field
         
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby="8"
        aria-invalid="false"
        class="input"
        data-bootstrap-override="inputfield"
        disabled=""
        id="7"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--disabled"
      id="8"
    >
      This InputField is disabled
    </div>
  </div>
</div>
`;

exports[`<InputField /> DisabledVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline input-field__overline--disabled"
      >
        <label
          class="label"
          for="47"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="48"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="47"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="48"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline input-field__overline--disabled"
      >
        <label
          class="label"
          for="49"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="50"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="49"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="50"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline input-field__overline--disabled"
      >
        <label
          class="label"
          for="51"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="51"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline input-field__overline--disabled"
      >
        <label
          class="label"
          for="53"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="53"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="56"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="55"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="56"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="58"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="57"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="58"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="59"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="61"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> Error story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label"
        for="5"
      >
        Error input field
         
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby="6"
        aria-invalid="true"
        class="input error"
        data-bootstrap-override="inputfield"
        id="5"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--error"
      id="6"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          error
        </title>
        <path
          d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
        />
      </svg>
      This is a fieldnote with an error.
    </div>
  </div>
</div>
`;

exports[`<InputField /> ErrorVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="31"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="32"
          aria-invalid="true"
          class="input error"
          data-bootstrap-override="inputfield"
          id="31"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="32"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="33"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="34"
          aria-invalid="true"
          class="input error"
          data-bootstrap-override="inputfield"
          id="33"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="34"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="35"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          class="input error"
          data-bootstrap-override="inputfield"
          id="35"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="37"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          class="input error"
          data-bootstrap-override="inputfield"
          id="37"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="40"
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          data-bootstrap-override="inputfield"
          id="39"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="40"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="42"
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          data-bootstrap-override="inputfield"
          id="41"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="42"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          data-bootstrap-override="inputfield"
          id="43"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          data-bootstrap-override="inputfield"
          id="45"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> InputWithin story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label"
        for="13"
      >
        Input field with button inside
         
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input"
        data-bootstrap-override="inputfield"
        id="13"
        type="text"
      />
      <div
        class="input-field__input-within"
      >
        <button
          class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand button button--icon"
          data-bootstrap-override="clickable-style-icon"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> LabelFieldnoteVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="15"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="16"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="15"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="16"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="17"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="18"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="17"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="18"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="19"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="19"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="21"
        >
          Label text
           
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="21"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="24"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="23"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="24"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="26"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="25"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="26"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="27"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="29"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline input-field__overline--no-label"
    >
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby="12"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="input"
        data-bootstrap-override="inputfield"
        id="11"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="12"
    >
      This input field has no visible label
    </div>
  </div>
</div>
`;

exports[`<InputField /> Required story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label"
        for="9"
      >
        Input field with fieldNote
         
      </label>
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby="10"
        aria-invalid="false"
        class="input"
        data-bootstrap-override="inputfield"
        id="9"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="10"
    >
      This is a fieldnote for a required input field.
    </div>
  </div>
</div>
`;

exports[`<InputField /> RequiredVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="63"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="64"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="63"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="64"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="65"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="66"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="65"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="66"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="67"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="67"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="69"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          id="69"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="72"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="71"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="72"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="74"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="73"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="74"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="75"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          data-bootstrap-override="inputfield"
          id="77"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, label, isError
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="79"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="80"
          aria-invalid="true"
          class="input error"
          data-bootstrap-override="inputfield"
          id="79"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="80"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label"
          for="81"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="82"
          aria-invalid="true"
          class="input error"
          data-bootstrap-override="inputfield"
          id="81"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="82"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M8.25 21L3 15.75V8.25L8.25 3H15.75L21 8.25V15.75L15.75 21H8.25ZM9.15 16.25L12 13.4L14.85 16.25L16.25 14.85L13.4 12L16.25 9.15L14.85 7.75L12 10.6L9.15 7.75L7.75 9.15L10.6 12L7.75 14.85L9.15 16.25Z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      fieldNote, label, disabled
    </p>
    <div>
      <div
        class="input-field__overline input-field__overline--disabled"
      >
        <label
          class="label"
          for="83"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="84"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="83"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="84"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline input-field__overline--disabled"
      >
        <label
          class="label"
          for="85"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-describedby="86"
          aria-invalid="false"
          class="input"
          data-bootstrap-override="inputfield"
          disabled=""
          id="85"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="86"
      >
        fieldNote text
      </div>
    </div>
  </div>
</div>
`;
